<resources>
    <string name="app_name">PK_Rent</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="fuel">Fuel</string>
    <string name="CurrentCar">CurrentCar</string>
    <string name="rentCar">Rent</string>
    <string name="NFCButton">Scan QR in car</string>
    <string name="channel_name">test</string>
    <string name="channel_description">opis testu asdasdasd</string>

    <string name="carID">car</string>
    <string name="todo">TODO</string>
    <string name="welcome">Welcome</string>
    <string-array name="Cars">
        <item>Audi</item>
        <item>Mercedes</item>
        <item>BMW</item>
        <item>SEAT</item>
        <item>Fiat</item>
        <item>Pegoute</item>
        <item>Syrena</item>
        <item>Toyota</item>
        <item>KIA</item>
    </string-array>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="chose_car_name_car">Audi</string>
    <string name="usterka_string">Usterka</string>
    <string name="tankowanie_string">TAnkowanie</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="model">model</string>
    <string name="registration">registration</string>
    <string name="Fueling">Fueling</string>
    <string name="faults">Faults</string>
    <string name="isCritical">Is Critical</string>

    <string name="explanation">Tap device with NFC tag</string>
</resources>
