<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="130dp"
        android:layout_height="82dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"

        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/button_car_list_adapter"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="47dp"
        android:layout_marginEnd="38dp"
        android:layout_toEndOf="@+id/imageView"
        android:text="@string/rentCar" />

    <TextView
        android:id="@+id/carTextView"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:text="@string/carID" />

    <TextView
        android:id="@+id/fuelTextview"
        android:layout_width="61dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/carTextView"
        android:layout_alignEnd="@+id/carTextView"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:text="@string/fuel" />
</RelativeLayout>