<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/faultsHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="294dp"
        android:fontFamily="casual"
        android:text="@string/faults"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/modelText"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/model"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/registrationText"
        android:layout_width="161dp"
        android:layout_height="43dp"
        android:layout_alignStart="@+id/modelText"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:fontFamily="monospace"
        android:text="@string/registration"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/fuelingHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:fontFamily="casual"
        android:text="@string/Fueling"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/fuelAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/faultDescritpion"
        android:layout_alignParentTop="true"
        android:layout_marginTop="130dp"
        android:ems="10"
        android:hint="Enter an amount of fuel"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/fuelingPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/faultDescritpion"
        android:layout_alignParentTop="true"
        android:layout_marginStart="-1dp"
        android:layout_marginTop="177dp"
        android:ems="10"
        android:hint="Cost of fuel"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/faultDescritpion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="355dp"
        android:ems="10"
        android:hint="Enter some description "
        android:inputType="text" />

    <Button
        android:id="@+id/fuelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="216dp"
        android:layout_marginEnd="17dp"
        android:text="@string/fuel" />

    <Button
        android:id="@+id/faultButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/faultDescritpion"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="22dp"
        android:text="@string/faults" />

    <Switch
        android:id="@+id/isCritical"
        android:layout_width="148dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/fuelAmount"
        android:layout_alignTop="@+id/faultButton"
        android:layout_marginStart="-50dp"
        android:text="@string/isCritical" />

</RelativeLayout>